Background color Update

--- a/GiphySearch/GiphySearch/Base.lproj/Main.storyboard
+++ b/GiphySearch/GiphySearch/Base.lproj/Main.storyboard
@@ -32,11 +32,11 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="dgN-Q1-uFp">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="dgN-Q1-uFp">
                                 <rect key="frame" x="0.0" y="296" width="414" height="432"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="20" reuseIdentifier="Cell" id="NEz-UT-sf8">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="100" id="NEz-UT-sf8">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NEz-UT-sf8" id="tEG-gS-3F0">
@@ -46,7 +46,7 @@
                                 </prototypes>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.94823643780782318" green="0.98313210227272729" blue="0.087653887733920743" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="cpr-gX-W6s" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="8" id="0cs-4C-fI0"/>
                             <constraint firstAttribute="trailingMargin" secondItem="dgN-Q1-uFp" secondAttribute="trailing" constant="-16" id="29G-hr-kpH"/>
